--- a/poster.html
+++ b/poster.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript">
+        $(document).ready(function () {
+           $('head').append('<link href="/chrome.css" rel="stylesheet" />');
+        });
+     </script>
+    <title>Poster for TPX</title>
+</head>
+<body>  
+<div class="container">
+<div class="rectangle1" id="rec1"></div>
+<div class="rectangle2" id="'rec2"></div>
+<div class="rectangle3" id="rec3"></div>
+<div class="textopright">Στρούζος Γιώργος|infocreative</div>
+<div class="textitle">clarity</div>
+<div class='subhead'><p></p>A short story about the international typographic style</p></div>
+</div>
 
+<div class="text-container">
+    <div class="textnum">17/02<div class='symbol'>|</div>10<div>
+     <div class="textgrtitle">Αμφιθέατρο Κραναού</div>  
+    <div class='textbottom'>Παρουσίαση Ερευνητικής Εργασίας
+    <br> Κλάδου Γραφιστικής
+    </div></div>
+</div>
+</body>
+</html>
